@@ -472,44 +472,44 @@ public class PluginMain extends Plugin {
 
     @Override
     public String getDescription() {
-        return "icon: https://icons8.com/icon/VUbZIzgZCtQe/u " +
-                "icon by https://icons8.com Icons8\n" +
-                "中文说明：\n" +
-                "1.将U盘插入计算机时，\n" +
-                "\t您会看到这样的提示\n" +
-                "\t---->键入“> udisk>驱动器号”来索引U盘\n" +
-                "\t只需按照提示输入，您将收到另一个提示\n" +
-                "\t---->搜索完成。\n" +
-                "\n" +
-                "2.搜索完成后。您可以输入“> udisk test”来搜索名称包含“ test”的文件。\n" +
-                "\t示例1：“>“ udisk测试” --->包含“ test”（“ TEST”“ Test”“ TEst” ...）的文件或目录。\n" +
-                "\t示例2：“> udisk test1; test2” --->包含“ test1（TEST1）”和“ test2（TEST2）”的文件或目录\n" +
-                "\t您也可以使用一些过滤器，例如“：f（file）”“：d（directory）”“：full”“：case”。不同的过滤器应以分号分隔。\n" +
-                "\t示例1：“> udisk test|f” ---->仅包含“ test”（“ TEST”“ Test”“ TEst” ...）的文件。\n" +
-                "\t示例2：“> udisk test|d” ---->仅包含“ test”（“ TEST”“ Test”“ TEst” ...）的目录。\n" +
-                "\t示例3：“> udisk test|full” --->名称为“ test”（“ TEST”“ Test”“ TEst” ...）的文件或目录。\n" +
-                "\t示例4：“> udisk test|case” --->包含“ test”的文件或目录。\n" +
-                "\t示例5：“> udisk test|f;full” --->仅名称为“ test”（“ TEST”“ Test”“ TEst” ...）的文件。\n" +
-                "\t示例6：“> udisk test|d;case;full” --->仅名称为“ test”的目录。\n" +
-                "\n" +
-                "English Instuction:\n" +
-                "\n" +
-                "1. When you plug the U disk into the computer,\n" +
-                "\tYou will see a tip like this\n" +
-                "\t----> Type \">udisk> drive letter\" to index the U disk\n" +
-                "\tJust input what the tip says, and you will receive another tip like this\n" +
-                "\t----> Search Done.\n" +
-                "\n" +
-                "2. When the search has done. You can input \">udisk test\" to search files whose name includeing \"test\".\n" +
-                "\tExample 1 : \">udisk test\" ---> files or dirs that including \"test\"(\"TEST\" \"Test\" \"TEst\"...).\n" +
-                "\tExample 2 : \">udisk test1;test2\" ---> files or dirs that including \"test1(TEST1)\" AND \"test2(TEST2)\"\n" +
-                "\tYou can also use some filters like \":f(file)\" \":d(directory)\" \":full\" \":case\".Different filters should be separated by semicolons.\n" +
-                "\tExample 1 : \">udisk test|f\" ----> Only files that including \"test\"(\"TEST\" \"Test\" \"TEst\"...).\n" +
-                "\tExample 2 : \">udisk test|d\" ----> Only directories that including \"test\"(\"TEST\" \"Test\" \"TEst\"...).\n" +
-                "\tExample 3 : \">udisk test|full\" ---> files or dirs whose name is \"test\"(\"TEST\" \"Test\" \"TEst\"...).\n" +
-                "\tExample 4 : \">udisk test|case\" ---> files or dirs that including \"test\".\n" +
-                "\tExample 5 : \">udisk test|f;full\" ---> Only files whose name is \"test\"(\"TEST\" \"Test\" \"TEst\"...).\n" +
-                "\tExample 6 : \">udisk test|d;case;full\" ---> Only dirs whose name is \"test\".";
+        return """
+                icon: https://icons8.com/icon/VUbZIzgZCtQe/u icon by https://icons8.com Icons8
+                中文说明：
+                1.将U盘插入计算机时，
+                \t您会看到这样的提示
+                \t---->键入“> udisk>驱动器号”来索引U盘
+                \t只需按照提示输入，您将收到另一个提示
+                \t---->搜索完成。
+
+                2.搜索完成后。您可以输入“> udisk test”来搜索名称包含“ test”的文件。
+                \t示例1：“>“ udisk测试” --->包含“ test”（“ TEST”“ Test”“ TEst” ...）的文件或目录。
+                \t示例2：“> udisk test1; test2” --->包含“ test1（TEST1）”和“ test2（TEST2）”的文件或目录
+                \t您也可以使用一些过滤器，例如“：f（file）”“：d（directory）”“：full”“：case”。不同的过滤器应以分号分隔。
+                \t示例1：“> udisk test|f” ---->仅包含“ test”（“ TEST”“ Test”“ TEst” ...）的文件。
+                \t示例2：“> udisk test|d” ---->仅包含“ test”（“ TEST”“ Test”“ TEst” ...）的目录。
+                \t示例3：“> udisk test|full” --->名称为“ test”（“ TEST”“ Test”“ TEst” ...）的文件或目录。
+                \t示例4：“> udisk test|case” --->包含“ test”的文件或目录。
+                \t示例5：“> udisk test|f;full” --->仅名称为“ test”（“ TEST”“ Test”“ TEst” ...）的文件。
+                \t示例6：“> udisk test|d;case;full” --->仅名称为“ test”的目录。
+
+                English Instuction:
+
+                1. When you plug the U disk into the computer,
+                \tYou will see a tip like this
+                \t----> Type ">udisk> drive letter" to index the U disk
+                \tJust input what the tip says, and you will receive another tip like this
+                \t----> Search Done.
+
+                2. When the search has done. You can input ">udisk test" to search files whose name includeing "test".
+                \tExample 1 : ">udisk test" ---> files or dirs that including "test"("TEST" "Test" "TEst"...).
+                \tExample 2 : ">udisk test1;test2" ---> files or dirs that including "test1(TEST1)" AND "test2(TEST2)"
+                \tYou can also use some filters like ":f(file)" ":d(directory)" ":full" ":case".Different filters should be separated by semicolons.
+                \tExample 1 : ">udisk test|f" ----> Only files that including "test"("TEST" "Test" "TEst"...).
+                \tExample 2 : ">udisk test|d" ----> Only directories that including "test"("TEST" "Test" "TEst"...).
+                \tExample 3 : ">udisk test|full" ---> files or dirs whose name is "test"("TEST" "Test" "TEst"...).
+                \tExample 4 : ">udisk test|case" ---> files or dirs that including "test".
+                \tExample 5 : ">udisk test|f;full" ---> Only files whose name is "test"("TEST" "Test" "TEst"...).
+                \tExample 6 : ">udisk test|d;case;full" ---> Only dirs whose name is "test".""";
     }
 
     @Override
@@ -540,7 +540,7 @@ public class PluginMain extends Plugin {
      */
     private String highLight(String html, String[] keywords) {
         StringBuilder builder = new StringBuilder();
-        List<String> collect = Arrays.stream(keywords).sorted((o1, o2) -> o2.length() - o1.length()).collect(Collectors.toList());
+        List<String> collect = Arrays.stream(keywords).sorted((o1, o2) -> o2.length() - o1.length()).toList();
         for (String keyword : collect) {
             if (!keyword.isBlank()) {
                 builder.append(keyword).append("|");
